fixed z-index

--- a/aboutCustom.css
+++ b/aboutCustom.css
@@ -76,6 +76,10 @@ body {
 	display: none;
 }
 
+.hamburger {
+	z-index: 3;
+}
+
 .bar1, .bar2, .bar3 {
   width: 35px;
   height: 5px;
