--- a/project.css
+++ b/project.css
@@ -81,6 +81,10 @@ img {
 	display: none;
 }
 
+.hamburger {
+	z-index: 3;
+}
+
 .bar1, .bar2, .bar3 {
   width: 35px;
   height: 5px;
